quotes.html - test

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
       <p>
       <ul>
         <li><a href="https://be.anyone.eu.org/difficulty-history">Difficulty history</a> (in-sync)</li>
-        <li><a href="https://be.anyone.eu.org/quotes">Quotes</a></li>
+        <li><a href="https://be.anyone.eu.org/quotes.html">Quotes</a></li>
         <li><a href="https://be.anyone.eu.org/holidays">Holidays</a></li>
         <li><a href="https://be.anyone.eu.org/bitcoin-whitepaper">Whitepaper</a></li>
         <li><a href="https://be.anyone.eu.org/fun">Fun</a></li>
