Rename all without html

--- a/index.html
+++ b/index.html
@@ -17,11 +17,11 @@
       </p>
       <p>
       <ul>
-        <li><a href="https://be.anyone.eu.org/difficulty-history">Difficulty history</a> (in-sync)</li>
+        <li><a href="https://be.anyone.eu.org/difficulty-history.html">Difficulty history</a> (in-sync)</li>
         <li><a href="https://be.anyone.eu.org/quotes.html">Quotes</a></li>
-        <li><a href="https://be.anyone.eu.org/holidays">Holidays</a></li>
-        <li><a href="https://be.anyone.eu.org/bitcoin-whitepaper">Whitepaper</a></li>
-        <li><a href="https://be.anyone.eu.org/fun">Fun</a></li>
+        <li><a href="https://be.anyone.eu.org/holidays.html">Holidays</a></li>
+        <li><a href="https://be.anyone.eu.org/bitcoin-whitepaper.html">Whitepaper</a></li>
+        <li><a href="https://be.anyone.eu.org/fun.html">Fun</a></li>
       </ul>
       </p>
     </div>
